2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_add_text): All
	gnome-mud messages sent to the terminal are now encoded to the
	encoding of the terminal.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-msp.c (mud_telnet_msp_process_command): Fixed
	formatting.
	* src/mud-window.c (mud_window_textview_keypress): We now convert user
	input from the current locale into the encoding specified in the
	preferences.

2009-02-17  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_network_event_cb):
	The server disconnecting the user now behaves in the same way as the
	user disconnecting itself.

2009-02-16  Les Harris  <lharris@gnome.org>

	* configure.ac, plugins/Makefile.am: Removed obsolete plugin from
	autofoo.

2009-02-16  Les Harris  <lharris@gnome.org>

	* plugins/python/*: Removed obsolete plugin.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-window.c (mud_window_remove_connection_view): GnomeMud
	picture will now be the correct size when the last view is closed.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send_naws): Will no
	longer try to send NAWS when unconnected.
	* src/mud-window.c (mud_window_size_request): Now properly notifies
	each view of size change.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect),
	(mud_connection_view_reconnect), (mud_connection_view_send),
	(mud_connection_view_new): Disconnect and Reconnect now completely
	tear down the connection. Reconnect will then instantiate a new
	connection.  Fixed a leak on instantiation where we weren't freeing
	gconf returned strings.
	* src/mud-telnet.[ch] (mud_telnet_init), (mud_telnet_finalize): Make sure
	we properly free all allocated buffers on finalization. Moved
	prev_buffer references into ENABLE_GST blocks as it is only used when
	MSP is enabled.
